# for display continuity sake please use 2 spaces instead of tabs

2013-01-29 mmichaud <michael.michaud@free.fr>
  * Prevent flickering of AboutDialog the first time it is opened.
  
2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fix bug 3600776 : regression in LabelStyle (caused by jts update to 1.13)

2013-01-20 mmichaud <michael.michaud@free.fr>
  * Fixed a memory leak in WKTPlugIn (geometry text representation was retained) 
  * Improve UndoableCommand so that one can deactivate commands related to a
    specific layer when the layer no more exists.
  * Resources used by a UndoableCommand can be removed if the UndoableCommand
    is related to a Layer which does not exist anymore (fix another memory leak) 
  
2013-01-19 mmichaud <michael.michaud@free.fr>
  * Fixed a severe bug in EditAttributeByFormulaPlugIn + I18N improvement
  
2013-01-15 mmichaud <michael.michaud@free.fr>
  * Avoid NPE in the case a WMS Layer has no Title

2013-01-15  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add several icons to File and Tools menu
  
2013-01-09 mmichaud <michael.michaud@free.fr>
  * Try to make feature selection order more predictable

2012-12-31 
  PLUS bump JumpPrinter to 1.83 
  - problems with errors in the range field syntax are hopefully now fixed (detected before they cause problems)
  - updated the language files as advised and added a new Finnish language file to the jar
  - fixed the "Images" tabbed pane label, it is now available in the language properties
  - The name  Italian language file is now spelled correctly.
  - replaced the iText-2.0.7.jar on the web site (it was missing)
  I am attaching the latest version (1.83) and I have also placed it on the cadplan.com.au web site

2012-12-21 mmichaud <michael.michaud@free.fr>
  * Small improvements in language files and in OffsetCurvePlugIn UI after 
    Jukka's feedback and before the end of the world.

2012-12-18   Giuseppe Aruta (giuseppe_aruta@yahoo.it)